feat(form): Give form an action

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       <div class="m-4 p-3">&nbsp;</div>
       
       <div class="width-limit mx-auto">
-        <form class="container bg-gray border rounded border-palegray">
+        <form class="container bg-gray border rounded border-palegray" action="https://formsubmit.co/7baf6be9a8df63a29f2341882e352c82" method="POST">
           <h2 class="fnt-crimson text-center m-2">Contact Form</h2>
           <div class="input-group my-3">
             <span class="input-group-text bg-light border-dark border-end" id="name-form">Name</span>
