--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
           <h2 class="fnt-crimson text-center m-2">Contact Form</h2>
           <div class="input-group my-3">
             <span class="input-group-text bg-light border-dark border-end" id="name-form">Name</span>
-            <input type="text" class="form-control bg-light border-dark border-start" placeholder="Your name" aria-label="Username" aria-describedby="name-form">
+            <input type="text" class="form-control bg-light border-dark border-start" placeholder="Your name" aria-label="Username" aria-describedby="name-form" name="name">
           </div>
           <div class="input-group my-3">
             <span class="input-group-text bg-light border-dark border-end" id="email-form">Email</span>
-            <input type="email" class="form-control bg-light border-dark border-start" placeholder="Email" aria-label="Email" aria-describedby="email-form">
+            <input type="email" class="form-control bg-light border-dark border-start" placeholder="Email" aria-label="Email" aria-describedby="email-form" name="email">
           </div>
             <div class="form-floating">
-              <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+              <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea" name="message"></textarea>
               <label for="floatingTextarea" class="text-dark">Comments</label>
             </div>
             <button type="submit" class="btn-border btn-offwhite text-dark px-4 py-2 fs-4 d-block my-3 mx-auto">Submit</button>
