fix(html): Change link to LinkedIn page

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <a href="https://www.github.com/Mgrunow1" class="fa-brands fa-github mx-2 text-white text-decoration-none"></a>
         <a href="https://www.facebook.com/michaelgrunow" class="fa-brands fa-facebook-f mx-2 text-white text-decoration-none"></a>
         <a href="https://www.instagram.com/Mgrunow1" class="fa-brands fa-instagram mx-2 text-white text-decoration-none"></a>
-        <a href="https://www.linkedin.com/in/michaelgrunowbiology" class="fa-brands fa-linkedin-in mx-2 text-white text-decoration-none"></a>
+        <a href="https://www.linkedin.com/in/michaelgrunow" class="fa-brands fa-linkedin-in mx-2 text-white text-decoration-none"></a>
       </div>
     </footer>
 
